--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "2.3.0",
   "type": "module",
   "scripts": {
-    "dev": "serve",
+    "dev": "browser-sync start --server --files '**/*.html, **/*.css, **/*.js' --port 3000 --no-notify",
     "prepare": "husky",
     "test": "echo 'No tests yet' && exit 0",
     "changelog": "changelogen",
     "update-readme": "node tools-gh/update-readme.js",
-    "release": "node tools-gh/check-demo-for-release.js && changelogen --release",
+    "release": "node tools-gh/check-demo-for-release.js && changelogen --release && npm run update-readme",
     "release:patch": "changelogen --release --patch",
     "release:minor": "changelogen --release --minor",
     "release:major": "changelogen --release --major",
@@ -21,8 +21,8 @@
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "browser-sync": "^3.0.4",
     "changelogen": "^0.6.2",
-    "husky": "^9.1.7",
-    "serve": "^14.2.5"
+    "husky": "^9.1.7"
   }
 }
