--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "changelog": "changelogen",
     "update-readme": "node tools-gh/update-readme.js",
     "release": "node tools-gh/check-demo-for-release.js && changelogen --release && npm run update-readme",
-    "release:patch": "changelogen --release --patch",
-    "release:minor": "changelogen --release --minor",
-    "release:major": "changelogen --release --major",
+    "push-release": "node tools-gh/push-release-to-main.js",
     "bugs": "gh issue list --label bug --state open",
     "create-bug": "node tools-gh/create-bug.js",
     "tasks": "gh issue list --label task --state open",
